# ObsAI

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ai_cost_sdk/: __init__.py  config.py  exporter.py  ids.py  metrics.py  middleware.py  observability.py  pricing.py  pricing_calc.py  tokenizer.py
ai_cost_sdk/integrations/: __init__.py  openai_wrapper.py  rag_wrapper.py  tools_wrapper.py
ai_cost_sdk/pricing/: openai-2025-09.json
examples/: sample_app.py
examples/grafana/: dashboard.json
examples/otel/: collector.yaml
tests/: test_config.py  test_exporter.py  test_metrics.py  test_multi_vendor_pricing.py  test_pricing.py  test_pricing_snapshot_config.py  test_tokenizer.py  test_tokenizer_fallback.py  test_wrappers.py
